--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.16",
     "pinia": "^2.1.7",
     "postcss-cli": "^11.0.0",
+    "sweetalert2": "^11.10.7",
     "tailwindcss": "^3.4.0",
     "tinycolor2": "^1.6.0",
     "vue": "^3.3.11",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
+    "sass": "^1.72.0",
     "vite": "^5.0.10"
   }
 }
